--- a/mycms/templates/enter.htm
+++ b/mycms/templates/enter.htm
@@ -3,14 +3,28 @@
 <head>
 <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
 <title><%PAGE_TITLE%></title>
-<link type="text/css" rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700&subset=all" />
-<link type="text/css" rel="stylesheet" href="tools/main.css"/>
+<link rel="shortcut icon" href="/favicon.ico?1"/>
+<link type="text/css" rel="stylesheet" href="//fonts.googleapis.com/css?family=Open+Sans:400,300,600,700&subset=all" />
+<link type="text/css" rel="stylesheet" href="tools/main.css?9"/>
+<link type="text/css" rel="stylesheet" href="datepicker/jquery-ui-1.8.17.custom.css" />
+<link type="text/css" rel="stylesheet" href="tools/jquery.jscrollpane.css"/>
+<script type="text/javascript" src="tools/jquery.latest.js"></script>
+<script type="text/javascript" src="tools/jquery.jscrollpane.min.js"></script>
+<script type="text/javascript" src="tools/jquery.ui.custom.js"></script>
+<script type="text/javascript" src="tools/jquery.mousewheel.js"></script>
 <script type="text/javascript" src="tools/ajax.js"></script>
-<script type="text/javascript" src="tools/main.js"></script>
+<script type="text/javascript" src="tools/main.js?8"></script>
 <script type="text/javascript" src="tools/dom.js"></script>
-<script type="text/javascript" src="tools/environment.js"></script>
-<script type="text/javascript" src="tools/syntax.js"></script>
-<script type="text/javascript" src="tools/misc.js"></script>
+<script type="text/javascript" src="tools/environment.js?9"></script>
+<script type="text/javascript" src="tools/popup.js"></script>
+<script type="text/javascript" src="tools/uploader.js"></script>
+<script type="text/javascript" src="tools/syntax.js?8"></script>
+<script type="text/javascript" src="tools/misc.js?10"></script>
+<script type="text/javascript" src="datepicker/jquery.ui.timepicker.addon.js"></script>
+<script type="text/javascript" src="datepicker/jquery-ui-i18n.js"></script>
+<script type="text/javascript" src="ckeditor4/ckeditor.js"></script>
+<script type="text/javascript" src="tools/jquery.counterup.min.js"></script>
+<script type="text/javascript" src="tools/jquery.waypoints.min.js"></script>
 <!--[if (gte IE 6)&(lte IE 8)]>
 	<script type="text/javascript" src="tools/html5.js"></script> 
 	<script type="text/javascript">
